espace personnel en cours

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,7 +62,7 @@
                                     {% endif %}
 
                                     {% if is_granted("ROLE_USER") %}
-                                        <a class="dropdown-item" href="{{ path('profile_index') }}" title="Aller à votre espace personnel pour consulter les annonces que vous avez publiées">Consulter vos publications</a>
+                                        <a class="dropdown-item" href="{{ path('profile_index') }}" title="Aller à votre espace personnel ">Espace personnel</a>
                                     {% endif %}
 
                                         {# <a class="dropdown-item" href="{{ path('customer_details') }}" title="Espace Client">Espace Client</a> #}
