--- a/templates/admin/activity_sector/_delete_form.html.twig
+++ b/templates/admin/activity_sector/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('activity_sector_delete', {'id': activity_sector.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('admin_activity_sector_delete', {'id': activity_sector.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ activity_sector.id) }}">
     <button class="btn">Delete</button>
