--- a/templates/admin/activity_sector/edit.html.twig
+++ b/templates/admin/activity_sector/edit.html.twig
@@ -5,9 +5,7 @@
 {% block body %}
     <h1>Edit ActivitySector</h1>
 
-    {{ include('activity_sector/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin/activity_sector/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('activity_sector_index') }}">back to list</a>
-
-    {{ include('activity_sector/_delete_form.html.twig') }}
+    <a href="{{ path('admin_activity_sector_index') }}">back to list</a>
 {% endblock %}
