--- a/templates/admin/users/edit.html.twig
+++ b/templates/admin/users/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Users</h1>
 
-    {{ include('users/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin/users/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('users_index') }}">back to list</a>
+    <a href="{{ path('admin_users_index') }}">back to list</a>
 
-    {{ include('users/_delete_form.html.twig') }}
+    {{ include('admin/users/_delete_form.html.twig') }}
 {% endblock %}
