--- a/templates/admin/users/index.html.twig
+++ b/templates/admin/users/index.html.twig
@@ -50,7 +50,7 @@
                             <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                             <td>
                                 <a href="{{ path('admin_users_show', {'slug': user.slug}) }}">Voir</a>
-                                <a href="#">edit</a>
+                    <a class="btn" href="{{ path('admin_users_edit', {'slug': user.slug}) }}">edit</a>
                             </td>
                         </tr>
                     {% else %}
