--- a/templates/profile/account.html.twig
+++ b/templates/profile/account.html.twig
@@ -40,9 +40,39 @@
                 <div class="pt-3 pb-2">
                     <p class="d-inline p-3"><span class="font-weight-bold">Crédits sur votre compte : </span> {{ user.account }}</p>
                 </div>
-                <a class="button pinkBackground" type="button">Ajouter des crédits à votre compte</a>  
+                {# <a class="button pinkBackground" type="button">Ajouter des crédits à votre compte</a>   #}
 
                  {# href="{{ path('customer_change_details', { 'id': user.id }) }}"   #}
+
+                <!-- Button trigger modal -->
+                <button type="button" class="button pinkBackground" data-toggle="modal" data-target="#reloadAccountModal">Ajouter des crédits à votre compte
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="reloadAccountModal" tabindex="-1" role="dialog" aria-labelledby="reloadAccountModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="reloadAccountModalLabel">Recharger votre compte en crédits</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            {% for subscription in subscriptions %}
+
+                            <a class="d-inline-block button pinkBackground w-25 h-25" type="button">Ajouter {{ subscription.credit }} crédits avec le {{ subscription.name }} pour {{ subscription.price }} &euro;</a>
+
+                            {% endfor %}
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                            {# <button type="button" class="btn btn-primary">Re</button> #}
+                        </div>
+                        </div>
+                    </div>
+                </div> 
             </div>    
         
         
