--- a/templates/admin/categories/index.html.twig
+++ b/templates/admin/categories/index.html.twig
@@ -3,37 +3,35 @@
 {% block title %}Categories index{% endblock %}
 
 {% block body %}
-    <h1>Categories index</h1>
+    <h1>Liste des categories d'annonce</h1>
+
+    <a href="{{ path('admin_categories_new') }}">Nouvelle categorie d'annonce</a>
+
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Slug</th>
-                <th>Credits_to_unlock</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th>Cout de débloquage</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
         {% for category in categories %}
             <tr>
-                <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
-                <td>{{ category.slug }}</td>
                 <td>{{ category.creditsToUnlock }}</td>
                 <td>
-                    <a href="{{ path('admin_categories_edit', {'id': category.id}) }}">edit</a>
-                    <a href="{{ path('admin_categories_delete', {'id': category.id}) }}">delete</a>
+                    <a href="{{ path('admin_categories_edit', {'id': category.id}) }}">Editer</a>
+                    <a href="#">Supprimer</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Aucun élément à afficher</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('admin_categories_new') }}">Create new</a>
 {% endblock %}
