--- a/templates/admin/categories/new.html.twig
+++ b/templates/admin/categories/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}New Categories{% endblock %}
+{% block title %}Nouvelle Categorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Categories</h1>
+    <h1>Créer une nouvelle Categorie</h1>
 
     {{ include('admin/categories/_form.html.twig') }}
 
-    <a href="{{ path('admin_categories_index') }}">back to list</a>
+    <a href="{{ path('admin_categories_index') }}">Retour à la liste</a>
 {% endblock %}
