--- a/templates/admin/subscription/new.html.twig
+++ b/templates/admin/subscription/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin/base_admin.html.twig' %}
 
-{% block title %}New Subscription{% endblock %}
+{% block title %}Nouveau pack{% endblock %}
 
 {% block body %}
-    <h1>Create new Subscription</h1>
+    <h1>Créer un nouveau pack</h1>
 
     {{ include('admin/subscription/_form.html.twig') }}
 
-    <a href="{{ path('admin_subscription_index') }}">back to list</a>
+    <a href="{{ path('admin_subscription_index') }}">Retour à la liste</a>
 {% endblock %}
