--- a/templates/admin/users/show.html.twig
+++ b/templates/admin/users/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Users{% endblock %}
 
 {% block body %}
-    <h1 class=" titre mb-4 pt-4 text-center">Users</h1>
+    <h1 class=" titre mb-4 pt-4 text-center">Utilisateur</h1>
 
     <a href="{{ path('admin_users_index') }}">Retour à la liste</a>
 
