historique des commandes

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -16,7 +16,7 @@
             </li>
 
             <li>
-                {# <a class="dropdown-item" href="{{ path('profile_credit') }}" title="Recharger votre compte en crédits">Gestion de vos crédits</a> #}
+                <a class="dropdown-item" href="{{ path('profile_orders_record') }}" title="Historique de vos commandes">Historique de vos commandes</a>
             </li>
             <li>
             
