--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -70,9 +70,9 @@
                 </div>
             <!--Fin Barre de recherche-->
 
-                 <div class="sortByFilter">
+                <!--<div class="sortByFilter">
                     <button class="sortByButton">Trier par<i class="las la-sort-amount-down"></i></button>
-                </div>
+                </div>-->
 
             <!--Bloc Carte entreprise-->
             
@@ -89,7 +89,7 @@
         </div>
 
         <!--Carte géo-->
-        <div class="map">
+        <div id="map" data-cities-coord="{{ citiesCoord }}">
             <!--Intégration Carte géo-->
         </div>
         <!--Fin carte géo-->
