modif styles.css

--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<main id="layoutSidenav_content">
+
    <div class="w-100 mx-auto fond">
         <div class="w-50 mx-auto formulaire">
             <h1 class="text-center titre mb-4 pt-4">Modifier votre annonce</h1>  
@@ -35,5 +37,5 @@
 
         </div>
     </div>
-
+</main>
 {% endblock %}
