--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -471,7 +471,7 @@ main section p {
         margin: 0;
     }
 
-    main {
+    main:not(#layoutSidenav_content) {
         display: flex;
         padding: 85px 0 0 0;
     }
